--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -8,17 +8,20 @@
     <Filter Include="Other">
       <UniqueIdentifier>{f67ca3be-b0fb-4dee-9efe-b0ffa68c9ddb}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Engine">
-      <UniqueIdentifier>{76508f1a-d4c9-40a5-b772-b016abd17c17}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Engine\OpenGL">
-      <UniqueIdentifier>{17f9b646-abc4-41b1-8f5c-93205c0dcb92}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Engine\Sockets">
+    <Filter Include="Sockets">
       <UniqueIdentifier>{bed3bf88-5dbd-4ded-b60f-efc092db7940}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Engine\Game">
+    <Filter Include="Game">
       <UniqueIdentifier>{c2c7c236-6bd7-487c-aff4-4503e3a5e7a2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game\Engine">
+      <UniqueIdentifier>{dda51aae-225c-474a-b816-e98f0cb67607}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game\Scripting">
+      <UniqueIdentifier>{54370cf7-034c-420f-aef9-2806de4c939b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="OpenGL">
+      <UniqueIdentifier>{17f9b646-abc4-41b1-8f5c-93205c0dcb92}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -26,126 +29,138 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="display.cpp">
-      <Filter>Engine\OpenGL</Filter>
+      <Filter>OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="mesh.cpp">
-      <Filter>Engine\OpenGL</Filter>
+      <Filter>OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="texture.cpp">
-      <Filter>Engine\OpenGL</Filter>
+      <Filter>OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="obj_loader.cpp">
-      <Filter>Engine\OpenGL</Filter>
+      <Filter>OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="stb_image.cpp">
-      <Filter>Engine\OpenGL</Filter>
+      <Filter>OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="shader.cpp">
-      <Filter>Engine\OpenGL</Filter>
+      <Filter>OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="camera.cpp">
-      <Filter>Engine\OpenGL</Filter>
+      <Filter>OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="EZSockets.cpp">
-      <Filter>Engine\Sockets</Filter>
+      <Filter>Sockets</Filter>
     </ClCompile>
     <ClCompile Include="EZClient.cpp">
-      <Filter>Engine\Sockets</Filter>
+      <Filter>Sockets</Filter>
     </ClCompile>
     <ClCompile Include="EZServer.cpp">
-      <Filter>Engine\Sockets</Filter>
-    </ClCompile>
-    <ClCompile Include="Image.cpp">
-      <Filter>Engine\Game</Filter>
-    </ClCompile>
-    <ClCompile Include="Entity.cpp">
-      <Filter>Engine\Game</Filter>
-    </ClCompile>
-    <ClCompile Include="Prop.cpp">
-      <Filter>Engine\Game</Filter>
-    </ClCompile>
-    <ClCompile Include="Ambient.cpp">
-      <Filter>Engine\Game</Filter>
+      <Filter>Sockets</Filter>
     </ClCompile>
     <ClCompile Include="Console.cpp">
       <Filter>Other</Filter>
     </ClCompile>
-    <ClCompile Include="Wall.cpp">
-      <Filter>Engine\Game</Filter>
+    <ClCompile Include="Ambient.cpp">
+      <Filter>Game\Engine</Filter>
     </ClCompile>
-    <ClCompile Include="Prism.cpp">
-      <Filter>Engine\Game</Filter>
+    <ClCompile Include="Entity.cpp">
+      <Filter>Game\Engine</Filter>
     </ClCompile>
-    <ClCompile Include="Spotlight.cpp">
-      <Filter>Engine\Game</Filter>
+    <ClCompile Include="Image.cpp">
+      <Filter>Game\Engine</Filter>
     </ClCompile>
     <ClCompile Include="Player.cpp">
-      <Filter>Engine\Game</Filter>
+      <Filter>Game\Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="Prism.cpp">
+      <Filter>Game\Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="Prop.cpp">
+      <Filter>Game\Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="Spotlight.cpp">
+      <Filter>Game\Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="Wall.cpp">
+      <Filter>Game\Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="Events.cpp">
+      <Filter>Game\Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="ComFunc.cpp">
+      <Filter>Game\Engine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="display.h">
-      <Filter>Engine\OpenGL</Filter>
+      <Filter>OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="mesh.h">
-      <Filter>Engine\OpenGL</Filter>
+      <Filter>OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="texture.h">
-      <Filter>Engine\OpenGL</Filter>
+      <Filter>OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="stb_image.h">
-      <Filter>Engine\OpenGL</Filter>
+      <Filter>OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="obj_loader.h">
-      <Filter>Engine\OpenGL</Filter>
+      <Filter>OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="shader.h">
-      <Filter>Engine\OpenGL</Filter>
+      <Filter>OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="camera.h">
-      <Filter>Engine\OpenGL</Filter>
+      <Filter>OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="transform.h">
-      <Filter>Engine\OpenGL</Filter>
+      <Filter>OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="EZSockets.h">
-      <Filter>Engine\Sockets</Filter>
+      <Filter>Sockets</Filter>
     </ClInclude>
     <ClInclude Include="EZClient.h">
-      <Filter>Engine\Sockets</Filter>
+      <Filter>Sockets</Filter>
     </ClInclude>
     <ClInclude Include="EZServer.h">
-      <Filter>Engine\Sockets</Filter>
-    </ClInclude>
-    <ClInclude Include="Image.h">
-      <Filter>Engine\Game</Filter>
-    </ClInclude>
-    <ClInclude Include="Entity.h">
-      <Filter>Engine\Game</Filter>
-    </ClInclude>
-    <ClInclude Include="Prop.h">
-      <Filter>Engine\Game</Filter>
-    </ClInclude>
-    <ClInclude Include="Ambient.h">
-      <Filter>Engine\Game</Filter>
+      <Filter>Sockets</Filter>
     </ClInclude>
     <ClInclude Include="Console.h">
       <Filter>Other</Filter>
     </ClInclude>
-    <ClInclude Include="Wall.h">
-      <Filter>Engine\Game</Filter>
+    <ClInclude Include="Ambient.h">
+      <Filter>Game\Engine</Filter>
     </ClInclude>
-    <ClInclude Include="Prism.h">
-      <Filter>Engine\Game</Filter>
+    <ClInclude Include="Entity.h">
+      <Filter>Game\Engine</Filter>
     </ClInclude>
-    <ClInclude Include="Spotlight.h">
-      <Filter>Engine\Game</Filter>
-    </ClInclude>
-    <ClInclude Include="Sprite.h">
-      <Filter>Engine\Game</Filter>
+    <ClInclude Include="Image.h">
+      <Filter>Game\Engine</Filter>
     </ClInclude>
     <ClInclude Include="Player.h">
-      <Filter>Engine\Game</Filter>
+      <Filter>Game\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="Prism.h">
+      <Filter>Game\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="Prop.h">
+      <Filter>Game\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="Spotlight.h">
+      <Filter>Game\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="Sprite.h">
+      <Filter>Game\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="Wall.h">
+      <Filter>Game\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="Events.h">
+      <Filter>Game\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="ComFunc.h">
+      <Filter>Game\Engine</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
